--- a/package.json
+++ b/package.json
@@ -7,22 +7,35 @@
     "babel": "^5.8.23",
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
+    "bluebird": "^2.10.2",
     "body-parser": "^1.13.3",
+    "bootstrap": "^3.3.5",
+    "bootstrap-webpack": "0.0.5",
+    "css-loader": "^0.19.0",
     "dust-loader": "^1.0.1",
     "dust-loader-complete": "^1.3.0",
     "dustjs-linkedin": "^2.7.2",
+    "exports-loader": "^0.6.2",
     "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^0.8.2",
     "falcor": "^0.1.12",
     "falcor-express": "^0.1.2",
     "falcor-json-graph": "^1.1.5",
     "falcor-router": "^0.2.9",
+    "file-loader": "^0.8.4",
     "glob": "^5.0.14",
+    "imports-loader": "^0.6.4",
     "jquery": "^2.1.4",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.1",
     "lodash": "^3.10.1",
     "react": "^0.13.3",
     "rx": "^3.1.2",
     "smart-agg": "^1.0.3",
     "smart-agg-adapter-http-basic": "^1.0.0",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6",
+    "uuid": "^2.0.1",
     "webpack": "^1.12.1"
   },
   "devDependencies": {
